--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?w=600&h=400&fit=crop" alt="Actress Photo" class="photo">
+        <img src="DSC00042.jpg" alt="Celli Pitt" class="photo">
         <h1>Celli Pitt</h1>
         <div class="shows">
             <div class="shows-title">Upcoming Shows:</div>
