--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="DSC00042.jpg" alt="Celli Pitt" class="photo">
+        <img src="IMG_1100.jpeg" alt="Celli Pitt" class="photo">
         <h1>Celli Pitt</h1>
         <div class="shows">
             <div class="shows-title">Upcoming Shows:</div>
