--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
             box-sizing: border-box;
         }
 
-        body {
+         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-            background: #ffffff;
+            background: url('https://images.unsplash.com/photo-1514320291840-2e0a9bf2a9ae?w=1920&q=80') no-repeat center center fixed;
+            background-size: cover;
             color: #000;
             display: flex;
             justify-content: center;
