--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
          body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-            background: url('https://images.unsplash.com/photo-1514320291840-2e0a9bf2a9ae?w=1920&q=80') no-repeat center center fixed;
+            background: url('IMG_1100.jpeg') no-repeat center center fixed;
             background-size: cover;
             color: #000;
             display: flex;
@@ -21,6 +21,7 @@
             align-items: center;
             min-height: 100vh;
             padding: 20px;
+             
         }
 
         .container {
@@ -44,6 +45,7 @@
             font-weight: 300;
             margin-bottom: 20px;
             letter-spacing: 2px;
+            color: ##FFFFFF
         }
 
         .shows {
@@ -104,8 +106,8 @@
         <img src="IMG_1100.jpeg" alt="Celli Pitt" class="photo">
         <h1>Celli Pitt</h1>
         <div class="shows">
-            <div class="shows-title">Upcoming Shows:</div>
-            <div>Dec 13 from 7pm to 10pm EST</div>
+            <div class="shows-title">Upcoming Shows</div>
+            <div>Rooted… In Us: Dec 13 from 7pm to 10pm EST</div>
         </div>
         <div class="links">
             <a href="https://www.eventbrite.com/e/rooted-in-us-a-jazz-corner-juke-starring-ms-celli-pitt-friends-tickets-1956457730739?aff=oddtdtcreator" target="_blank" aria-label="Buy Tickets">
