--- a/index.html
+++ b/index.html
@@ -10,12 +10,11 @@
             padding: 0;
             box-sizing: border-box;
         }
-
          body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
             background: url('IMG_1100.jpeg') no-repeat center center fixed;
             background-size: cover;
-            color: #000;
+            color: #FFFFFF;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -23,13 +22,11 @@
             padding: 20px;
              
         }
-
         .container {
             max-width: 600px;
             width: 100%;
             text-align: center;
         }
-
         .photo {
             width: 100%;
             max-width: 400px;
@@ -39,57 +36,49 @@
             display: block;
             background: #f0f0f0;
         }
-
         h1 {
             font-size: 2.5rem;
             font-weight: 300;
             margin-bottom: 20px;
             letter-spacing: 2px;
-            color: ##FFFFFF
+            color: #FFFFFF;
         }
-
         .shows {
             font-size: 0.9rem;
             font-weight: 300;
             margin-bottom: 30px;
             line-height: 1.6;
             letter-spacing: 0.5px;
+            color: #FFFFFF;
         }
-
         .shows-title {
             font-weight: 400;
             margin-bottom: 8px;
         }
-
         .links {
             display: flex;
             justify-content: center;
             gap: 20px;
         }
-
         a {
             display: flex;
             align-items: center;
             justify-content: center;
             text-decoration: none;
-            color: #000;
+            color: #FFFFFF;
             transition: all 0.3s ease;
         }
-
         a:hover {
             opacity: 0.5;
         }
-
         .ticket-icon {
             width: 36px;
             height: 36px;
         }
-
         .instagram-icon {
             width: 28px;
             height: 28px;
         }
-
         @media (max-width: 600px) {
             h1 {
                 font-size: 2rem;
