--- a/index.html
+++ b/index.html
@@ -85,18 +85,18 @@
             }
             
             .photo {
-                height: 450px;
+                height: 700px;
             }
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <img src="croppedver.png" alt="Celli Pitt" class="photo">
+        <img src="IMG_1100.jpeg" alt="Celli Pitt" class="photo">
         <h1>Celli Pitt</h1>
         <div class="shows">
             <div class="shows-title">Upcoming Shows</div>
-            <div>Rooted… In Us: Dec 13 from 7pm to 10pm EST</div>
+            <div>Rooted… In Us: Dec 13 from 7-10pm EST</div>
         </div>
         <div class="links">
             <a href="https://www.eventbrite.com/e/rooted-in-us-a-jazz-corner-juke-starring-ms-celli-pitt-friends-tickets-1956457730739?aff=oddtdtcreator" target="_blank" aria-label="Buy Tickets">
