--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         .photo {
             width: 100%;
             max-width: 400px;
-            height: 500px;
-            object-fit: cover;
+            height: auto;
+            object-fit: contain;
             margin: 0 auto 30px;
             display: block;
             background: #f0f0f0;
@@ -85,7 +85,7 @@
             }
             
             .photo {
-                height: 1000px;
+                height: 450px;
             }
         }
     </style>
@@ -96,7 +96,7 @@
         <h1>Celli Pitt</h1>
         <div class="shows">
             <div class="shows-title">Upcoming Shows</div>
-            <div>Rooted… In Us: Dec 13 from 7-10pm EST</div>
+            <div>Rooted… In Us: Dec 13 from 7pm to 10pm EST</div>
         </div>
         <div class="links">
             <a href="https://www.eventbrite.com/e/rooted-in-us-a-jazz-corner-juke-starring-ms-celli-pitt-friends-tickets-1956457730739?aff=oddtdtcreator" target="_blank" aria-label="Buy Tickets">
