--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
          body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-            background: url('IMG_1100.jpeg') no-repeat center center fixed;
+            background: url('DSC00042.jpg') no-repeat center center fixed;
             background-size: cover;
             color: #FFFFFF;
             display: flex;
